--- a/requirements.txt
+++ b/requirements.txt
@@ -65,3 +65,9 @@ wadllib==1.3.6
 xdg==5
 xkit==0.0.0
 zipp==1.0.0
+asgiref==3.5.2
+autopep8==1.7.0
+mysqlclient==2.1.1
+pycodestyle==2.9.1
+sqlparse==0.4.2
+toml==0.10.2
