--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 autopep8==1.7.0
 Django==4.1
+django-cors-headers==3.13.0
 mysqlclient==2.1.1
 pycodestyle==2.9.1
 python-dotenv==0.20.0
